ft(user-registration):users should be register. - add tests for user registration - add validations - add forms for registartion - show validation errors   [Finishes #164798250]

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,14 +1,13 @@
 body {
-  font-family: "Quantico", sans-serif;
+  font-family: 'Quantico', sans-serif;
 }
 
 h2 {
-  color: #1b7999;
   text-align: center;
 }
 
 div {
-  font-family: Quantico;
+  font-family: 'Quantico', sans-serif;
 }
 
 .card-title {
@@ -56,7 +55,7 @@ div {
 }
 
 .big-container {
-  font-family: Quantico;
+  font-family: 'Quantico', sans-serif;
   position: absolute;
   left: 0%;
   top: 0%;
@@ -93,6 +92,7 @@ div {
   width: 90%;
   text-align: left;
 }
+
 .articles {
   float: left;
   width: 45%;
