--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -55,10 +55,14 @@
 
     .form-errors {
       float: left;
-      color: red;
+      color: #ce8c64;
       text-align: left;
+      font-size: 13px;
+      padding-left: 27px;
+      margin-top: -10px;
     }
   }
+
   #link {
     text-decoration: none;
   }
@@ -95,3 +99,47 @@
   }
 }
 
+@media (max-width: 768px) {
+  #registerForm {
+    width: 85% !important;
+    margin-left: 70px !important;
+  }
+  form {
+    .textField {
+      width: 93% !important;
+    }
+  }
+  .button-success {
+    width: 93% !important;
+  }
+}
+
+@media (max-width: 360px) {
+  #registerForm {
+    width: 100% !important;
+    margin-left: 30px !important;
+  }
+  form {
+    .textField {
+      width: 150% !important;
+    }
+  }
+  .button-success {
+    width: 150% !important;
+  }
+}
+
+@media (max-width: 414px) {
+  #registerForm {
+    width: 100% !important;
+    margin-left: 30px !important;
+  }
+  form {
+    .textField {
+      width: 150% !important;
+    }
+  }
+  .button-success {
+    width: 150% !important;
+  }
+}
