--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,57 @@
 .has-search .form-control {
   padding-left: 2.375rem;
 }
+.dropbtn {
+  background-color: #4caf50;
+  cursor: pointer;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0px;
+  color: blue;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content {
+  background: white;
+  .navlink {
+    color: black;
+    display: block;
+    padding: 10px;
+  }
+}
+
+.dropdown-content a:hover {
+  background-color: #003153;
+  color: white;
+}
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+.profile-img {
+  border: 1px solid inherit;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: inherit;
+}
 
 .has-search .form-control-feedback {
   position: absolute;
