ft(view-edit-profile): enable users to view-edit their profiles - enable authenticated users to view and edit their profiles - add tests for profile and edit profile functionality
[Finishes #164798255]

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Quantico', sans-serif;
+  font-family: "Quantico", sans-serif;
   height: 100%;
 }
 
@@ -12,7 +12,7 @@ h2 {
 }
 
 div {
-  font-family: 'Quantico', sans-serif;
+  font-family: "Quantico", sans-serif;
 }
 
 .card-title {
@@ -60,8 +60,8 @@ div {
 }
 
 .big-container {
-  margin-top: 20px;
-  font-family: 'Quantico', sans-serif;
+  font-family: "Quantico", sans-serif;
+  margin-top: 50px;
   text-align: center;
   font-size: small;
 }
