--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,10 @@
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Quantico', sans-serif;
+  height: 100%;
 }
 
 h2 {
@@ -55,11 +60,8 @@ div {
 }
 
 .big-container {
+  margin-top: 20px;
   font-family: 'Quantico', sans-serif;
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  right: 0%;
   text-align: center;
   font-size: small;
 }
