feat(users-follow-unfollow): users can follow or unfollow eachother
- create button for users to follow/unfollow eachother
- create div to view the number of followers  and following a user has
- create functionality to view the profiles of each follower
- create functionality to view the profiles of each followee
- write tests for follow/unfollow fucntionality

[Finishes #164798263]

--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -32,7 +32,7 @@
         font-weight: 500;
         font-size: 14px;
         border-radius: 5px;
-        font-family: Quantico, "sans-serif";
+        font-family: Quantico;
         text-align: left;
         height: 50px;
         background: #ffff;
@@ -44,7 +44,7 @@
         box-shadow: none !important;
         border-radius: 5px !important;
         padding-left: 60px !important;
-        font-family: Quantico, "sans-serif" !important;
+        font-family: Quantico !important;
         color: #000000 !important;
       }
     }
@@ -54,6 +54,14 @@
       float: left;
       margin-top: -10px;
     }
+  }
+
+  follow-button {
+    font-weight: 500;
+    width: 50%;
+    border-radius: 5px;
+    font-family: Quantico;
+    color: #000000;
   }
 
   form {
@@ -86,6 +94,7 @@
       text-align: left;
       font-size: 13px;
       padding-left: 27px;
+      margin-top: -10px;
     }
   }
 
@@ -165,40 +174,52 @@
       width: 93% !important;
     }
   }
+}
 
-  @media (max-width: 360px) {
-    #registerForm {
-      width: 100% !important;
-      margin-left: 30px !important;
+@media (max-width: 768px) {
+  #registerForm {
+    width: 85% !important;
+    margin-left: 70px !important;
+  }
+  form {
+    .textField {
+      width: 93% !important;
     }
-    form {
-      .textField {
-        width: 150% !important;
-      }
-    }
-    .button-success {
+  }
+}
+
+@media (max-width: 360px) {
+  #registerForm {
+    width: 100% !important;
+    margin-left: 30px !important;
+  }
+  form {
+    .textField {
       width: 150% !important;
     }
   }
+  .button-success {
+    width: 150% !important;
+  }
+}
 
-  @media (max-width: 414px) {
-    #registerForm {
-      width: 100% !important;
-      margin-left: 30px !important;
-    }
-    form {
-      .textField {
-        width: 150% !important;
-      }
-    }
-    .button-success {
+@media (max-width: 414px) {
+  #registerForm {
+    width: 100% !important;
+    margin-left: 30px !important;
+  }
+  form {
+    .textField {
       width: 150% !important;
     }
   }
-  @media (max-width: 378px) {
-    .button-collective {
-      border-right: 0px;
-      margin-right: -100px;
-    }
+  .button-success {
+    width: 150% !important;
+  }
+}
+@media (max-width: 378px) {
+  .button-collective {
+    border-right: 0px;
+    margin-right: -100px;
   }
 }
