--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,3 @@
-html {
-  height: 100%;
-}
-
 body {
   font-family: "Quantico", sans-serif;
   height: 100%;
@@ -62,8 +58,9 @@ div {
 
 .big-container {
   font-family: "Quantico", sans-serif;
-  margin-top: 50px;
   text-align: center;
+  font-size: small;
+  margin-top: 50px;
 }
 
 .links {
