--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -7,7 +7,8 @@
 .img-container {
   float: right;
   width: 30%;
-
+  margin-top: -200px;
+  margin-right: -250px;
   img {
     width: 80%;
   }
@@ -27,14 +28,74 @@
     margin: 10px 0 0 0;
   }
 }
+
+a {
+  color: inherit;
+}
+
+a:link {
+  text-decoration: none;
+}
+/* visited link */
+a:visited {
+  text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+  text-decoration: none;
+}
+
+/* selected link */
+a:active {
+  text-decoration: none;
+}
+
+button.stats {
+  background: none;
+  border: none;
+}
 .container-personal-profile {
   margin-top: 20px;
   margin-left: 50px;
   margin-right: 50px;
   padding: 50px 100px 400px 100px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: auto;
+  height: auto;
   .user-details {
     float: left;
     width: 70%;
   }
+}
+
+.text-truncate {
+  white-space: pre !important;
+  overflow: inherit;
+}
+
+.ourdp2 {
+  height: 50px;
+  width: 50px;
+  max-height: 50px;
+}
+
+#follower {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 5px;
+}
+
+#following {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 5px;
+}
+.profile-page {
+  width: 80px;
+  height: 80px;
+  border: 2px solid gray;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
+.modal-footer {
+  border-top: none;
 }
