feat(like-dislike):users can like/dislike articles
- creat like and dislike action dispensers
- add like and dislike button images to styles folder
- add like and dislike buttons to the article view page
- format getArticlesreducer to also get likes and dislikes of an article
- write tests for the like/dislike functionality

[Finishes #164798260]

--- a/src/styles/profile.scss
+++ b/src/styles/profile.scss
@@ -85,6 +85,12 @@ button.stats {
   margin-bottom: 5px;
 }
 
+.divider {
+  width: 15px;
+  height: auto;
+  display: inline-block;
+}
+
 #following {
   border-bottom: 1px solid #ccc;
   margin-bottom: 5px;
