--- a/src/styles/singleArticle.scss
+++ b/src/styles/singleArticle.scss
@@ -3,6 +3,7 @@
   text-align: left;
   color: #000000;
 }
+
 .btn.follow {
   background: none;
   color: black;
@@ -11,20 +12,23 @@
   font-size: 12px;
   padding: 0 13px 0 13px;
 }
+
 .btn.follow:hover {
   background: none;
   color: black;
   border: #17fb13 1px solid;
   margin-left: 5px;
 }
+
 .article-profile > img {
   float: left;
   height: 50px;
   width: 50px;
   border: 1px solid #000000;
   border-radius: 50%;
-  margin: 20 px;
+  margin: 20px;
 }
+
 .article-image {
   display: block;
   max-width: 100%;
@@ -32,23 +36,33 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .article-author {
   float: left;
   width: 80%;
   margin-left: 20px;
 }
+
 .article-single {
   float: left;
   width: 100%;
   display: block;
 }
+
 .article-description-body {
   margin: 10px;
 }
+
 .image-div {
   width: 100%;
   background: rgba(0, 0, 0, 0.1);
 }
+
 .single-article-div {
   width: 100%;
+}
+
+form {
+  .comments {
+  }
 }
